static/main.css
/* ... */
.card:has(.table-header) {
  padding: 0 0 1.5rem;

  .table-wrapper {
    padding: 0 1.5rem;
  }
}

.table-header {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 1rem 1.5rem;
  border: 1px solid var(--color-border-separator);
  border-top-left-radius: 0.75rem;
  border-top-right-radius: 0.75rem;

  h2 {
    order: -1;
    width: 30%;
    margin: 0;
    font-size: 1rem;
    line-height: 1.5rem;
    color: var(--color-header-text);
  }

  form {
    width: 40%;
    justify-content: center;
    display: flex;

    input {
      display: inline-block;
      margin: 0;
      border-top-left-radius: 0;
      border-bottom-left-radius: 0;
      width: 100%;
    }

    &::before {
      content: '';
      background-image: url('/img/icons/icon-filter-light.svg');
      background-repeat: no-repeat;
      background-position: center center;
      font-size: 16px;
      width: 44px;
      height: 44px;
      display: inline-block;
      border: 1px solid var(--color-border-primary);
      border-right: 0;
      background-color: var(--color-input-icon-bg);
      border-top-left-radius: 0.375rem;
      border-bottom-left-radius: 0.375rem;
    }
  }

  .btn-holder {
    width: 30%;
  }
}

.table-wrapper {
  overflow: auto;
  scrollbar-color: var(--color-scrollbar);
  scrollbar-width: thin;
}

.filter-table {
  margin-bottom: 1rem;
  padding: 0.75rem 1rem;
  border-radius: 0.375rem;
  border: none;
  box-shadow: none;
  background: var(--color-bg-input);
  border: 1px solid var(--color-border-secondary);
  color: var(--color-text-primary);
  width: 100%;
  max-width: 500px;
}

.table {
  border-collapse: collapse;
  width: 100%;
  border-radius: 3px;
  color: var(--color-text-primary);
}

.table tbody {
  border-bottom: 1px solid var(--color-border-primary);
}

.col-toggle {
  position: absolute;
  top: 15px;
  right: 1.5rem;
  color: var(--color-text-primary);
}

.table th {
  font-weight: normal;
  border-bottom: 1px solid var(--color-border-tertiary);
  padding: 0.75rem 1.5rem 0.5rem 0.75rem;
  text-align: left;
  white-space: nowrap;
}

.table td.checkbox {
  width: 1px;
  max-width: 10px;
}

.table th[data-sort-key] {
  cursor: pointer;
  font-weight: bold;
  position: relative;
}

.table th[data-sort-key]:before,
.table th[data-sort-key]:after {
  bottom: 10px;
  display: block;
  font-weight: 100;
  opacity: 0.3;
  position: absolute;
}

.table th[data-sort-key]:before {
  content: "\2191";
  right: 9px;
}

.table th[data-sort-key]:after {
  content: "\2193";
  right: 2px;
}

.table th.sorting_asc:before,
.table th.sorting_desc:after {
  opacity: 1;
}

.table tbody td {
  border-top: 1px solid var(--color-border-primary);
  padding: 0.75rem 1.55rem 0.75rem 0.55rem;
  color: var(--color-text-muted);
  white-space: nowrap;
  height: 3.5rem;
  font-size: 14px;
  line-height: 20px;
}

.table tbody a {
  background-color: inherit;
  position: relative;
  padding-right: 10px;
  z-index: 1000;
  color: var(--color-text-muted);

  &:hover {
    color: var(--color-text-primary);
  }
}

.self-link {
  text-decoration: underline;
  cursor: pointer;
  color: var(--highlight-color) !important;
}

.table tbody tr:nth-of-type(odd) {
  background-color: var(--color-table-row-odd);
}

.table tbody tr:nth-of-type(even) {
  background-color: var(--color-table-row-even);
}

.table.plain-table tbody tr {
  background-color: var(--color-table-row-even);
}

[id$="-error"] {
  display: none;
  margin: 10px 0;
  padding: 10px;
  border-radius: 3px 3px 3px 3px;
  color: var(--color-error-text);
  background-color: var(--color-error-bg);
}

.table-multihead {
  box-shadow: inset -9px 0px 0px 0px var(--color-table-row-even),
    inset -10px 0px 0px 0px var(--color-text-inverse);
}

.load-more {
  color: var(--color-text-primary);
  display: none;
  width: 100%;
  background-color: var(--color-load-more-bg);
  cursor: pointer;
  border: 0;
  box-shadow: none;
  padding: 5px;
}

.load-more.visible {
  display: block;
}

.details-table {
  width: 100%;
  border-collapse: collapse;
  font-size: 0.875rem;
  color: var(--color-text-primary);
}

.details-table th {
  text-align: left;
  border-top: 1px dashed #404040;
  vertical-align: middle;
  padding: 0.75rem;
  padding-left: 1rem;
  max-width: 400px;
}

.details-table td {
  border-top: 1px dashed #404040;
  vertical-align: middle;
  padding: 0.75rem;
}

.details-table td,
.details-table th {
  border-right: 1px dashed #404040;
}

.details-table tr:first-child>* {
  border-top: none;
}

.details-table tr>td:last-child,
.details-table tr>th:last-child {
  border-right: 0;
}

.details-table td {
  overflow-wrap: break-word;
  color: var(--color-text-muted);
}

#q-features span,
#e-features span {
  cursor: help;
}

.features span {
  background: var(--color-bg-hover);
  border-radius: 0.25rem;
  padding: 0.125rem 0.25rem;
  margin-right: 0.125rem;
  font-size: 0.75rem;
}

.small-table {
  width: 50%;
  max-width: 600px;
}

.medium-table {
  width: 70%;
  max-width: 1000px;
}

label {
  display: block;
}

.center {
  text-align: center;
}

.right, th.right {
  text-align: right;
}

.left {
  text-align: left;
}

a[data-tag] {
  cursor: pointer;
}

.hide {
  display: none;
}

.form label>span {
  width: 150px;
  display: inline-block;
  padding-top: 8px;
  padding-right: 5px;
  vertical-align: top;
  color: var(--color-text-primary);
}

.form input:not([type="radio"]):not([type="checkbox"]):not(.filter-table),
.form select {
  max-width: 400px;
  width: calc(100% - 160px);
}

.form label input[type="checkbox"] {
  margin: 10px 0;
}

.form .label {
  margin: 0.5em 0;
}

.form legend {
  margin-bottom: 20px;
  padding: 0 0.25rem;
  font-weight: 600;
  color: var(--color-text-primary);
}

.form button[type="submit"]:not(.btn-inline),
.form input[type="submit"]:not(.btn-inline) {
  margin-left: 154px;
  display: inline-block;
}
/* ... */

